--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-<style>
+style
 * {
     box-sizing: border-box;
 }
@@ -8,7 +8,7 @@
     width: 17%;
     margin: 35px;
     padding: 25px
-    height: 300px;
+    height 300px;
     overflow: hidden;
 }
 
